--- a/src/global.css
+++ b/src/global.css
@@ -47,10 +47,11 @@ body {
   @font-face {
     font-family: "Sora";
     font-style: normal;
-    font-weight: 500;
-    src: url("/fonts/Sora-Medium.woff") format("woff");
+    font-weight: 600;
+    src: url("/fonts/Sora-SemiBold.woff") format("woff");
   }
 }
+
 
 .shadow {
   box-shadow: 0px 5px 15px 0px #000;
@@ -61,11 +62,11 @@ body {
 }
 
 .bg-glass {
-  background: linear-gradient(
-    98deg,
-    rgba(255, 255, 255, 0.1) 0%,
-    rgba(255, 255, 255, 0) 100%
-  );
+  background:  linear-gradient(
+    98deg, 
+    rgba(255, 255, 255, 0.10) 0%, 
+    rgba(255, 255, 255, 0.00) 100%
+    );
 }
 
 .border-buttons {
