--- a/src/global.css
+++ b/src/global.css
@@ -69,6 +69,14 @@ body {
     );
 }
 
+.bg-modal-glass {
+  background:  linear-gradient(
+    98deg, 
+    rgb(27, 27, 27) 0%, 
+    rgb(0, 0, 0) 100%
+    );
+}
+
 .border-buttons {
   border: 2px solid rgba(255, 255, 255, 0.4);
 }
