--- a/src/global.css
+++ b/src/global.css
@@ -52,7 +52,6 @@ body {
   }
 }
 
-
 .shadow {
   box-shadow: 0px 5px 15px 0px #000;
 }
@@ -62,19 +61,15 @@ body {
 }
 
 .bg-glass {
-  background:  linear-gradient(
-    98deg, 
-    rgba(255, 255, 255, 0.10) 0%, 
-    rgba(255, 255, 255, 0.00) 100%
-    );
+  background: linear-gradient(
+    98deg,
+    rgba(255, 255, 255, 0.1) 0%,
+    rgba(255, 255, 255, 0) 100%
+  );
 }
 
 .bg-modal-glass {
-  background:  linear-gradient(
-    98deg, 
-    rgb(27, 27, 27) 0%, 
-    rgb(0, 0, 0) 100%
-    );
+  background: linear-gradient(98deg, rgb(27, 27, 27) 0%, rgb(0, 0, 0) 100%);
 }
 
 .border-buttons {
