--- a/src/global.css
+++ b/src/global.css
@@ -47,8 +47,8 @@ body {
   @font-face {
     font-family: "Sora";
     font-style: normal;
-    font-weight: 500;
-    src: url("/fonts/Sora-Medium.woff") format("woff");
+    font-weight: 600;
+    src: url("/fonts/Sora-SemiBold.woff") format("woff");
   }
 }
 
@@ -66,6 +66,10 @@ body {
     rgba(255, 255, 255, 0.1) 0%,
     rgba(255, 255, 255, 0) 100%
   );
+}
+
+.bg-modal-glass {
+  background: linear-gradient(98deg, rgb(27, 27, 27) 0%, rgb(0, 0, 0) 100%);
 }
 
 .border-buttons {
