--- a/src/global.css
+++ b/src/global.css
@@ -72,6 +72,10 @@ body {
   background: linear-gradient(98deg, rgb(27, 27, 27) 0%, rgb(0, 0, 0) 100%);
 }
 
+.bg-modal-button {
+  background: linear-gradient(98deg, rgb(34, 34, 34) 0%, rgb(22, 22, 22) 100%);
+}
+
 .border-buttons {
   border: 2px solid rgba(255, 255, 255, 0.3);
 }
