--- a/src/global.css
+++ b/src/global.css
@@ -41,14 +41,26 @@ body {
   @font-face {
     font-family: "Sora";
     font-style: normal;
+    font-weight: 600;
+    src: url("/fonts/Sora-SemiBold.woff") format("woff");
+  }
+  @font-face {
+    font-family: "Sora";
+    font-style: normal;
+    font-weight: 500;
+    src: url("/fonts/Sora-Medium.woff") format("woff");
+  }
+  @font-face {
+    font-family: "Sora";
+    font-style: normal;
     font-weight: 400;
     src: url("/fonts/Sora-Regular.woff") format("woff");
   }
   @font-face {
     font-family: "Sora";
     font-style: normal;
-    font-weight: 600;
-    src: url("/fonts/Sora-SemiBold.woff") format("woff");
+    font-weight: 300;
+    src: url("/fonts/Sora-Thin.woff") format("woff");
   }
 }
 
@@ -109,4 +121,20 @@ body {
   opacity: 0.5;
   filter: blur(170px);
   z-index: -1;
+}
+
+@layer utilities {
+  .custom-border-1 {
+    border: 1px solid rgba(255, 255, 255, 0.15);
+  }
+  .custom-border-2 {
+    border: 2px solid rgba(255, 255, 255, 0.15);
+  }
+  .custom-bg-white {
+    background: linear-gradient(98deg, rgba(255, 255, 255, 0.10) 0%, rgba(255, 255, 255, 0.00) 100%);
+    backdrop-filter: blur(100px);
+  }
+  .custom-bg-button {
+    background: linear-gradient(130deg, #DA301F 0.24%, #F48946 18.43%, #EE3560 35.57%, #FA4784 51.68%, #FF48C0 66.75%, #8E38B5 81.82%, #5542BB 89.09%, #0051C3 100%);
+  }
 }
