--- a/src/global.css
+++ b/src/global.css
@@ -63,12 +63,9 @@
      src: url("/fonts/Sora-Thin.woff") format("woff");
    }
  }
- .bg-modal-glass {
-   background: linear-gradient(98deg, rgb(27, 27, 27) 0%, rgb(0, 0, 0) 100%);
- }
  
- .bg-modal-button {
-   background: linear-gradient(98deg, rgb(34, 34, 34) 0%, rgb(22, 22, 22) 100%);
+ .custom-text-50 {
+  color:rgba(255, 255, 255, 0.50)
  }
  
  .custom-shadow {
@@ -81,13 +78,16 @@
  .custom-border-2 {
    border: 2px solid rgba(255, 255, 255, 0.15);
  }
+
+ .custom-border-b-1{
+  border-bottom: 1px solid rgba(255, 255, 255, 0.15);
+ }
  .custom-bg-white {
    background: linear-gradient(
      98deg,
      rgba(255, 255, 255, 0.1) 0%,
      rgba(255, 255, 255, 0) 100%
    );
-   backdrop-filter: blur(100px);
  }
  .custom-bg-button {
    background: linear-gradient(
@@ -119,3 +119,11 @@
    filter: blur(170px);
    z-index: -1;
  }
+
+ .bg-modal-glass {
+  background: linear-gradient(98deg, rgb(27, 27, 27) 0%, rgb(0, 0, 0) 100%);
+}
+
+.bg-modal-button {
+  background: linear-gradient(98deg, rgb(34, 34, 34) 0%, rgb(22, 22, 22) 100%);
+}
