--- a/src/global.css
+++ b/src/global.css
@@ -7,12 +7,12 @@
 @tailwind utilities;
 
 /**
- * WHAT IS THIS FILE?
- *
- * Globally applied styles. No matter which components are in the page or matching route,
- * the styles in here will be applied to the Document, without any sort of CSS scoping.
- *
- */
+  * WHAT IS THIS FILE?
+  *
+  * Globally applied styles. No matter which components are in the page or matching route,
+  * the styles in here will be applied to the Document, without any sort of CSS scoping.
+  *
+  */
 
 *,
 *::before,
@@ -41,46 +41,55 @@ body {
   @font-face {
     font-family: "Sora";
     font-style: normal;
+    font-weight: 600;
+    src: url("/fonts/Sora-SemiBold.woff") format("woff");
+  }
+  @font-face {
+    font-family: "Sora";
+    font-style: normal;
+    font-weight: 500;
+    src: url("/fonts/Sora-Medium.woff") format("woff");
+  }
+  @font-face {
+    font-family: "Sora";
+    font-style: normal;
     font-weight: 400;
     src: url("/fonts/Sora-Regular.woff") format("woff");
   }
   @font-face {
     font-family: "Sora";
     font-style: normal;
-    font-weight: 600;
-    src: url("/fonts/Sora-SemiBold.woff") format("woff");
+    font-weight: 300;
+    src: url("/fonts/Sora-Thin.woff") format("woff");
   }
 }
 
-.shadow {
+.custom-text-50 {
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.custom-shadow {
   box-shadow: 0px 5px 15px 0px #000;
 }
 
-.border-white-opacity-20 {
+.custom-border-1 {
   border: 1px solid rgba(255, 255, 255, 0.15);
 }
+.custom-border-2 {
+  border: 2px solid rgba(255, 255, 255, 0.15);
+}
 
-.bg-glass {
+.custom-border-b-1 {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.15);
+}
+.custom-bg-white {
   background: linear-gradient(
     98deg,
     rgba(255, 255, 255, 0.1) 0%,
     rgba(255, 255, 255, 0) 100%
   );
 }
-
-.bg-modal-glass {
-  background: linear-gradient(98deg, rgb(27, 27, 27) 0%, rgb(0, 0, 0) 100%);
-}
-
-.bg-modal-button {
-  background: linear-gradient(98deg, rgb(34, 34, 34) 0%, rgb(22, 22, 22) 100%);
-}
-
-.border-buttons {
-  border: 2px solid rgba(255, 255, 255, 0.3);
-}
-
-.color-gradient {
+.custom-bg-button {
   background: linear-gradient(
     130deg,
     #da301f 0.24%,
@@ -109,4 +118,12 @@ body {
   opacity: 0.5;
   filter: blur(170px);
   z-index: -1;
+}
+
+.bg-modal-glass {
+  background: linear-gradient(98deg, rgb(27, 27, 27) 0%, rgb(0, 0, 0) 100%);
+}
+
+.bg-modal-button {
+  background: linear-gradient(98deg, rgb(34, 34, 34) 0%, rgb(22, 22, 22) 100%);
 }
