--- a/src/global.css
+++ b/src/global.css
@@ -155,3 +155,19 @@ body {
     rgba(255, 255, 255, 0) 100%
   );
 }
+
+.background-container {
+  position: absolute; 
+  width: 100%;
+  height: 100%;
+  background-image: url("../public/assets/icons/vector-top.svg"), url("../public/assets/icons/vector-bottom.svg");
+  background-size: cover;
+  background-position: top, bottom;
+  background-repeat: no-repeat;
+  z-index: 0;
+}
+
+.content-container {
+  position: relative; 
+  z-index: 10;
+}
