--- a/src/global.css
+++ b/src/global.css
@@ -157,10 +157,11 @@ body {
 }
 
 .background-container {
-  position: absolute; 
+  position: absolute;
   width: 100%;
   height: 100%;
-  background-image: url("../public/assets/icons/vector-top.svg"), url("../public/assets/icons/vector-bottom.svg");
+  background-image: url("../public/assets/icons/vector-top.svg"),
+    url("../public/assets/icons/vector-bottom.svg");
   background-size: cover;
   background-position: top, bottom;
   background-repeat: no-repeat;
@@ -168,6 +169,6 @@ body {
 }
 
 .content-container {
-  position: relative; 
+  position: relative;
   z-index: 10;
 }
