--- a/src/global.css
+++ b/src/global.css
@@ -228,23 +228,23 @@ body {
       border-box;
   border-radius: 4px;
   border: 1px solid transparent;
+}
 
-  &::after {
-    border-width: 0 1.5px 1.5px 0;
-    background:
-      linear-gradient(48deg, black 0%, black) padding-box,
-      linear-gradient(
-          150deg,
-          #da301f 0%,
-          #f48946 40%,
-          #ee3560 60%,
-          #fa4784 80%,
-          #ff48c0 100%
-        )
-        border-box;
-    border-style: solid;
-    border-color: transparent;
-  }
+.border-gradient:checked::after {
+  border-width: 0 1.5px 1.5px 0;
+  background:
+    linear-gradient(48deg, black 0%, black) padding-box,
+    linear-gradient(
+        150deg,
+        #da301f 0%,
+        #f48946 40%,
+        #ee3560 60%,
+        #fa4784 80%,
+        #ff48c0 100%
+      )
+      border-box;
+  border-style: solid;
+  border-color: transparent;
 }
 
 .border-gradient:checked ~ label {
