--- a/src/global.css
+++ b/src/global.css
@@ -153,6 +153,21 @@ body {
   );
 }
 
+.custom-text-gradient {
+  background: linear-gradient(
+    to right,
+    #da301f,
+    #f48946,
+    #ee3560,
+    #fa4784,
+    #ff48c0,
+    #8e38b5,
+    #5542bb,
+    #0051c3
+  );
+  background-clip: text;
+}
+
 .bg-modal-glass {
   background: linear-gradient(98deg, rgb(27, 27, 27) 0%, rgb(0, 0, 0) 100%);
 }
