grid&style changes

--- a/src/global.css
+++ b/src/global.css
@@ -156,7 +156,7 @@ body {
 
 .custom-text-gradient {
   background: linear-gradient(
-    to right,
+    190deg,
     #da301f,
     #f48946,
     #ee3560,
